--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,11 @@
 /* TODO explore more CSS attributes */
-/* zawsze sprawdzaj jaki tag/tagi określa dany parametr */
- 
-body{ /* no classes, so accessed by tags */
+/* zawsze sprawdzaj jaki tag/tagi określa dany parametr 
+jesli cos jest niewidoczne, pewnie jakis tag jest niezamkniety */
+/* #jesli cos jest tuz po '<' symbolu ( z wyjatkiem slow kluczowych (?); zawsze sprawdz ile zawiera tagow */ 
+/* keep items close in the index close in the style */
+
+
+body{
 
     background: #F4F4F4;
     margin:0;
@@ -15,6 +19,11 @@ body{ /* no classes, so accessed by tags */
         color: black
 }
 
+.page-heading{
+    text-align: center;
+    margin-bottom: 20px;
+}
+
 
 .container{
     width: 750px ;
@@ -24,7 +33,7 @@ body{ /* no classes, so accessed by tags */
 }
 
 .header{ /* denotes a class */
-    padding: 45px 0 20px 40px; /* space around element (tblr) */
+    padding: 45px 0 20px 40px; /* space around element (trbl) */
     border: 2px solid black;
     
 }
@@ -74,7 +83,7 @@ h2{ /* can just predefine to be used in the future */
     color: green;
     font-family: "Georgia";
     font-size: 13px;
-    line-height: 20px;
+    line-height: 30px;
     text-emphasis: justify;
     
 }
@@ -91,14 +100,14 @@ h2{ /* can just predefine to be used in the future */
 }
 
 
-footer{
-    padding: 6px 40x 6px 40px;
-    background: #d6d6d6;
+footer{ /*how to make it full length? */
+    padding: 6px 40px 6px 40px; /*TRBL */
+    background: #d6d6d6;''
+
     font-family: "Lucida Sans Unicode";
     color: #444444;
-    font-size: 11px;
+    font-size: 13px;
     text-decoration: right;
-    
     
 }
 
@@ -113,7 +122,9 @@ footer a:hover{
     color:white;
 }
 
-.separator{ /* keep items close in the index close in the style */
+*/
+
+.separator{ 
     color: red;
     font-size: 10px;
     
@@ -137,8 +148,36 @@ footer a:hover{
     font-family: cursive;
 }
 
-#about-page .description{ /*dot because class */
+#about-page .description{ /*dot because DIV class */
     clear:both; 
     
 }
+
+/*************contact page **************/
+
+#contact-page #form{ /*accessing DIV by id */
+    width: 500px;
+    border: 2px solid black;
+    padding: 10px 10px 10px 10px;
+    margin: 0 auto;
+        
+} 
+
+
+#contact-page #form input{
+    width: 100%;
+    border-radius: 5px;
+    height: 20px;
+    background: gainsboro;
+    
+}
+
+#contact-page #form #message{
+    width: 100%;
+    border-radius: 5px;
+    background: #d6d6d6;
+    
+    
+}
+
 
