--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ jesli cos jest niewidoczne, pewnie jakis tag jest niezamkniety */
 
 body{
 
-    background: white;
+    background-image: url("gory.jpg");
     margin:0;
     
     
@@ -81,7 +81,7 @@ h2{ /* can just predefine to be used in the future */
 
 
 .main{ /*where is red? */
-    background-image: url("gory.jpg");
+    /*background-image: url("gory.jpg"); */
     margin: 0 0 0 180px;
     padding: 35px 40px 30px 0px;
     color: #061249;
