--- a/css/style.css
+++ b/css/style.css
@@ -153,7 +153,7 @@ footer a:hover{
     float: right;
     width: 20%;
     color: red;
-    font-family: cursive;
+    font-family: fantasy;
 }
 
 #about-page .description{ /*dot because DIV class */
@@ -193,7 +193,7 @@ footer a:hover{
 #contact-page #form #submit{
      height: 30px;
     color: dimgrey;
-    background: azure;
+    background: #afbef2;
 }
 
 
