--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ body{
     color: #000000; /* c5d6db */
     text-decoration: none;
     font-size: 16px;
-    font-family:  "Arial", "Myriad Pro"; /*second list. just /*in case*/    
+    font-family:  "Georgia"; /*second list. just /*in case*/    
 }
 
 .menu a:hover{
@@ -66,7 +66,7 @@ h1{
     margin: 0px;
     color: #1722a9;
     font-size: 30px;
-    font-family: "Times";
+    font-family: "Georgia";
     font-weight: normal;
 }
 
