more style changes

--- a/css/style.css
+++ b/css/style.css
@@ -13,11 +13,12 @@ body{
     
 }
 
-.link-title{
+.link-title {
     text-decoration: none;
-    font-size: 24px;
-        color: black
+    font-size: 40px;
+    color: black;
 }
+
 
 .page-heading{
     text-align: center;
@@ -42,7 +43,7 @@ body{
     background: #fb5e22;
     padding: 6px 0 6px 40px;
     text-align: center;
-    
+    font-weight: 600;
 }
 
 .menu a { /* addressing the tags individually */
@@ -73,7 +74,7 @@ h1{
 
 h2{ /* can just predefine to be used in the future */
     color: #061249;
-    font-size: 15px;
+    font-size: 21px;
     margin: 20px 0px 5px 0px;
     
 }
